Fix for bug 177964 - FTP: can't download file with # in its name,r=nhotta@netscape.com,sr=darin@netscape.com,a=asa@mozilla.org